/****** Object:  Table [dbo].[TB_CAR_COST_NOLOG]    Script Date: 2026-05-20 오후 4:40:07 ******/
SET ANSI_NULLS ON
GO
SET QUOTED_IDENTIFIER ON
GO
CREATE TABLE [dbo].[TB_CAR_COST_NOLOG](
	[IDX] [int] IDENTITY(1,1) NOT NULL,
	[COM_CD] [int] NULL,
	[USE_STR_DATE] [date] NULL,
	[USE_END_DATE] [date] NULL,
	[GAS_COST] [numeric](18, 0) NULL,
	[INSURANCE_COST] [numeric](18, 0) NULL,
	[REPAIR_COST] [numeric](18, 0) NULL,
	[TAX_COST] [numeric](18, 0) NULL,
	[ETC_COST] [numeric](18, 0) NULL,
	[LAST_UPT_USER_ID] [nvarchar](20) NULL,
	[LAST_UPT_DT] [datetime] NULL,
 CONSTRAINT [PK__TB_CAR_C__C4971C066F7F8B4B] PRIMARY KEY CLUSTERED 
(
	[IDX] ASC
)WITH (PAD_INDEX = ON, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, FILLFACTOR = 90, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
) ON [PRIMARY]
GO
